Fixed collapsing skills wrap

--- a/src/styles/clickMod.css
+++ b/src/styles/clickMod.css
@@ -36,9 +36,10 @@
     position: absolute;
     color: white;
     top:30px;
-    right: 60px;
+    left: 60px;
 }
 .info-wrap{
+    max-width: 100%;
     padding-left: 30px;
     padding-right: 30px;
 }
@@ -174,16 +175,21 @@
 }
 
 @media only screen and (max-width: 550px) {
+    .exit{
+        left:auto;
+        right:30px;
+    }
     .title-wrap h1{
-        font-size: 2.8rem;
+        font-size: 3.5rem;
     }
     .title-wrap .num{
-        font-size: 2.8rem;
+        font-size: 3.5rem;
     }
     .title-wrap{
         margin-top: 15px;
     }
     .content-wrap {
+        margin:0px;
         margin-top: 20px;
     }
     .tech{
@@ -191,5 +197,9 @@
     }
     .link-wrap {
         margin-top: 20px;
+    }
+    .content-wrap::after{
+        left:0px;
+        width: 95%;
     }
 }
