--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,7 @@
 }
 
 .app-wrap{
+    position: relative;
     height: 100vh;
     width: 100vw;
     background-color: #1B1B1B;
@@ -158,7 +159,7 @@ svg{
     transform: translate(-50%,-50%);
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 600px) {
     html{
         font-size: 14px;
     }
@@ -198,7 +199,7 @@ svg{
     }
     
     .circle{
-        r:16;
+        r:15;
     }
     
     .legBox{
